fix too much margin

--- a/themes/exeal/static/assets/css/main.css
+++ b/themes/exeal/static/assets/css/main.css
@@ -753,7 +753,6 @@ div.course-body {
   padding: 2rem;
   color: #FFFFFF;
   height: 22em;
-  margin-bottom: 1em;
   position: relative;
 }
 
